// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`renders the UI if thhere are no messages 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
